# hospital_readmission

./: .gitignore  README.md  pyproject.toml
config/: main.yaml
data/final/: X_test_final.csv  X_train_final.csv  y_test_final.csv  y_train_final.csv
data/processed/: X_train_SFS_20_LogisticRegression(max_iter=200).csv  X_train_SFS_20_RandomForestClassifier(random_state=42).csv  X_train_all.csv  feature_names_SFS_20_LogisticRegression(max_iter=200).txt  feature_names_SFS_20_RandomForestClassifier(random_state=42).txt  feature_names_all.txt  y_train.csv
data/processed/processed.csv/: test.csv
data/raw/: train.csv
models/: preprocessor.joblib  selector_SFS_20_LogisticRegression(max_iter=200).joblib  selector_SFS_20_RandomForestClassifier(random_state=42).joblib
notebooks/: data_inspection.ipynb  evaluate_models.ipynb  feature_selection.ipynb  readmission-hospital.ipynb  readmission-hospital_original.ipynb
results/: prediction_metrics.json  predictions.csv  results.json
src/: __init__.py  evaluate.py  feature_selection.py  predict.py  process.py  train_model.py  utils.py  visualisation.py
